@@ -1,5 +1,7 @@
 2006-04-14  Hendrik Tews  <tews@debian>
 
+	* fix strutil/translate bugs, add test frame test/translate.cc
+
 	* added callback registration
 
 2006-04-13  Hendrik Tews  <tews@debian>
